--- a/modules-available/dnbd3/lang/en/template-tags.json
+++ b/modules-available/dnbd3/lang/en/template-tags.json
@@ -10,8 +10,10 @@
     "lang_client": "Client",
     "lang_clientCount": "Clients",
     "lang_clientList": "List of clients",
+    "lang_clients": "Clients",
     "lang_clientsByLocation": "Clients by location",
     "lang_comment": "Comment",
+    "lang_complete": "Complete",
     "lang_count": "Count",
     "lang_disabled": "Disabled",
     "lang_diskFree": "Free space",
@@ -29,6 +31,8 @@
     "lang_firewalled": "Limit access to corresponding locations",
     "lang_flags": "Flags",
     "lang_global": "Global",
+    "lang_image": "Image",
+    "lang_imageList": "Image list",
     "lang_lastSeen": "Last seen",
     "lang_latency": "Latency",
     "lang_location": "Location",
@@ -37,6 +41,8 @@
     "lang_managedServer": "Automatically configured DNBD3-Proxy",
     "lang_managedServerAdd": "Add automatically configured proxy",
     "lang_managedServerHelp": "Automatically configured DNBD3-Proxies will boot like normal bwLehrpool-Clients over PXE and the satellite server. If a client is configured as proxy it will boot with a different configuration and acts exclusively as proxy. The client can therefore not be used as a normal working station.\r\nThe advantage is that you don't need to install or configure anything else. The client will reboot every week to get possible updates ot the minilinux.\r\nIf you want to use this feature, please create a partition with ID 45 on the local hard disk of the proxy server. In contrast to the ID 44 partition which is formated after every reboot, this partition is persistent. As a rule of thumb the partition should be as big as possible. If there is no space left the proxy will delete the VM which hasn't be used for the longest time. More information in the wiki.",
+    "lang_manualRefresh": "Manual refresh",
+    "lang_manualRefreshInfo": "All servers are queried every 5 minutes to update the table below. Hit the refresh button to update the table immediately.",
     "lang_numFails": "Errors",
     "lang_overrideIp": "IP address to use",
     "lang_overrideIpInfo": "Usually the address that the DHCP server assigns to the boot interface of the proxy will be used. If the proxy has multiple interfaces (that also get an address assigned via DHCP) you can specify that address here to enforce their usage instead.",
@@ -52,9 +58,11 @@
     "lang_sessionRx": "Received since boot",
     "lang_sessionTx": "Sent since boot",
     "lang_settings": "Settings",
+    "lang_size": "Size",
     "lang_storageSize": "Storage size",
     "lang_test": "Test",
     "lang_txTotal": "Total sent",
+    "lang_uplink": "Uplink",
     "lang_uptime": "Uptime",
     "lang_wantToDelete": "Do you really want to delete this server? (Reboot\/Shutdown has to be done manually)"
 }
