Update permission translations

--- a/modules-available/serversetup-bwlp/lang/de/permissions.json
+++ b/modules-available/serversetup-bwlp/lang/de/permissions.json
@@ -1,5 +1,5 @@
 {
-	"edit.address": "Boot-Adresse des Servers auswählen.",
-	"edit.menu": "Bootmenü anpassen.",
-	"download": "USB-Image herunteladen."
+    "download": "USB-Image herunterladen.",
+    "edit.address": "Boot-Adresse des Servers ausw\u00e4hlen.",
+    "edit.menu": "Bootmen\u00fc anpassen."
 }
