--- a/modules-available/locations/lang/de/template-tags.json
+++ b/modules-available/locations/lang/de/template-tags.json
@@ -6,7 +6,7 @@
     "lang_deleteChildLocations": "Untergeordnete Orte ebenfalls l\u00f6schen",
     "lang_deleteLocation": "Ort l\u00f6schen",
     "lang_deleteSubnet": "Bereich l\u00f6schen",
-    "lang_deleteSubnetWarning": "Alle zum L\u00f6schen markierten Subnetze werden gelöscht. Diese Aktion kann nicht r\u00fcckg\u00e4ngig gemacht werden.",
+    "lang_deleteSubnetWarning": "Alle zum L\u00f6schen markierten Subnetze werden gel\u00f6scht. Diese Aktion kann nicht r\u00fcckg\u00e4ngig gemacht werden.",
     "lang_editConfigVariables": "Konfig.-Variablen",
     "lang_editRoomplan": "Raumplan bearbeiten",
     "lang_endAddress": "Endadresse",
@@ -22,10 +22,10 @@
     "lang_machineLoad": "Besetzt",
     "lang_matchingMachines": "Enthaltene Rechner",
     "lang_name": "Name",
-    "lang_noParent": "Kein \u00fcbergeordneter Ort",
     "lang_overrideCount": "Angepasst",
     "lang_parentLocation": "\u00dcbergeordneter Ort",
     "lang_referencingLectures": "Veranstaltungen",
+    "lang_showRoomplan": "Raumplan anzeigen",
     "lang_startAddress": "Startadresse",
     "lang_subnet": "IP-Bereich",
     "lang_sysConfig": "Lokalisierung",
