--- a/modules-available/locations/lang/en/template-tags.json
+++ b/modules-available/locations/lang/en/template-tags.json
@@ -22,10 +22,10 @@
     "lang_machineLoad": "In use",
     "lang_matchingMachines": "Matching clients",
     "lang_name": "Name",
-    "lang_noParent": "No parent",
     "lang_overrideCount": "Overridden",
     "lang_parentLocation": "Parent location",
     "lang_referencingLectures": "Assigned Lectures",
+    "lang_showRoomplan": "Show room plan",
     "lang_startAddress": "Start address",
     "lang_subnet": "IP range",
     "lang_sysConfig": "Localization\/Integration",
