--- a/modules-available/runmode/lang/de/template-tags.json
+++ b/modules-available/runmode/lang/de/template-tags.json
@@ -3,6 +3,7 @@
     "lang_assignMachineIntroText": "Definieren Sie hier Clients, die in einem speziellen Betriebsmodus gestartet werden sollen. Sie k\u00f6nnen Rechner anhand der UUID, IP, Hostname oder MAC-Adresse suchen.",
     "lang_assignRunmodeToMachine": "Betriebsmodus",
     "lang_confirmDelete": "Wollen Sie den Betriebsmodus f\u00fcr diesen Client entfernen?",
+    "lang_existingClients": "Vorhandene Clients mit diesem Betriebsmodus",
     "lang_isclient": "Pool-Client",
     "lang_machine": "Client",
     "lang_mode": "Modus",
