--- a/modules-available/runmode/lang/en/messages.json
+++ b/modules-available/runmode/lang/en/messages.json
@@ -2,6 +2,7 @@
     "cannot-edit-module": "Module {{0}} cannot be edited directly",
     "enabled-removed-save": "Saved {{0}} clients, deleted {{1}}",
     "invalid-modeid": "Module {{0}} doesn't provide mode {{1}}",
+    "machine-no-permission": "No permission for client {{0}}",
     "machine-not-found": "Client {{0}} not found",
     "machine-not-runmode": "No special mode of operation configured for client {{0}}",
     "machine-removed": "Removed client {{0}}",
