--- a/modules-available/runmode/lang/en/template-tags.json
+++ b/modules-available/runmode/lang/en/template-tags.json
@@ -3,6 +3,7 @@
     "lang_assignMachineIntroText": "Define the clients which should start a special runmode configuration. You can search for clients by UUID, IP address, host name or MAC address.",
     "lang_assignRunmodeToMachine": "Runmode",
     "lang_confirmDelete": "Do you want to delete the runmode for this client?",
+    "lang_existingClients": "Existing clients with this run mode",
     "lang_isclient": "Pool-Client",
     "lang_machine": "Client",
     "lang_mode": "Mode",
