--- a/modules-available/adduser/lang/en/messages.json
+++ b/modules-available/adduser/lang/en/messages.json
@@ -5,7 +5,7 @@
     "password-changed": "Password changed",
     "password-mismatch": "Password and password confirmation do not match",
     "roles-updated": "Roles have been updated",
-    "user-deleted": "Deleted user {{0}}",
+    "user-deleted": "Deleted user {{0}} (ID={{1}})",
     "user-edited": "User data has been updated",
     "user-not-found": "User with ID {{0}} not found"
 }
