[adduser] add user: Check various input fields via js for immediate feedback
Refs #3344

--- a/modules-available/adduser/lang/de/template-tags.json
+++ b/modules-available/adduser/lang/de/template-tags.json
@@ -10,8 +10,12 @@
     "lang_editUser": "Benutzer bearbeiten",
     "lang_email": "E-Mail",
     "lang_fullName": "Vollst\u00e4ndiger Name",
+    "lang_fullnameMissing": "Kein Name angegeben",
     "lang_login": "Login",
+    "lang_loginTooShort": "Login zu kurz",
     "lang_name": "Name",
+    "lang_passwordTooShort": "Passwort zu kurz",
+    "lang_passwordsDontMatch": "Passworte stimmen nicht \u00fcberein",
     "lang_phone": "Telefon",
     "lang_role": "Rolle",
     "lang_userDeleteConfirm": "M\u00f6chten Sie diesen Benutzer wirklich l\u00f6schen?",
