--- a/modules-available/adduser/lang/en/template-tags.json
+++ b/modules-available/adduser/lang/en/template-tags.json
@@ -10,8 +10,12 @@
     "lang_editUser": "Edit user",
     "lang_email": "Email",
     "lang_fullName": "Full Name",
+    "lang_fullnameMissing": "Full name missing",
     "lang_login": "Login",
+    "lang_loginTooShort": "Login too short",
     "lang_name": "Name",
+    "lang_passwordTooShort": "Password too short",
+    "lang_passwordsDontMatch": "Passwords don't match",
     "lang_phone": "Phone",
     "lang_role": "Role",
     "lang_userDeleteConfirm": "Do you want to delete this user?",
