[dnbd3] Renamed view.list permission to access-page
Refs #3340

--- a/modules-available/dnbd3/lang/de/permissions.json
+++ b/modules-available/dnbd3/lang/de/permissions.json
@@ -1,8 +1,8 @@
 {
+    "access-page": "Seite sehen",
     "configure.external": "Externen Proxy bearbeiten",
     "configure.proxy": "Automatischen Proxy bearbeiten",
     "refresh": "Serverliste aktualisieren",
     "toggle-usage": "Aktivieren\/Deaktivieren",
-    "view.details": "Proxydetails anzeigen",
-    "view.list": "Proxyliste anzeigen"
+    "view.details": "Proxydetails anzeigen"
 }
