--- a/modules-available/minilinux/lang/de/template-tags.json
+++ b/modules-available/minilinux/lang/de/template-tags.json
@@ -1,5 +1,4 @@
 {
-    "lang_uptodate": "Aktuell",
     "lang_canUpdate1": "Mindestens eine Komponente von",
     "lang_canUpdate2": "kann aktualisiert werden. F\u00fcr einen reibungslosen Betrieb wird empfohlen, alle Komponenten auf dem aktuellen Stand zu halten.",
     "lang_configurationPackageNotFound": "Keine Konfigurationspakete gefunden!",
@@ -10,5 +9,7 @@
     "lang_outdated": "Veraltet",
     "lang_redownload": "Erneut herunterladen",
     "lang_systemUpdated": "Das System ist auf dem aktuellen Stand.",
-    "lang_update": "Aktualisieren"
+    "lang_update": "Aktualisieren",
+    "lang_updateAll": "Alle Module aktualisieren",
+    "lang_uptodate": "Aktuell"
 }
