--- a/modules-available/dozmod/lang/de/permissions.json
+++ b/modules-available/dozmod/lang/de/permissions.json
@@ -1,14 +1,13 @@
 {
-    "actionlog.showtarget": "Target Data im Aktions-Log anzeigen.",
-    "actionlog.showuser": "User Data im Aktions-Log anzeigen.",
+    "actionlog.view": "Aktions-Log einsehen.",
     "expiredimages.delete": "Zur L\u00f6schung vorgemerkete Abbilder l\u00f6schen.",
     "mailconfig.save": "\u00c4nderungen an der SMTP-Konfiguration zum Versenden von Mails speichern.",
-    "mailconfig.testmail": "Eine Test E-Mail verschicken.",
     "runtimeconfig.save": "\u00c4nderungen an der Laufzeit-Konfiguration speichern.",
     "templates.reset": "E-Mail Templates zur\u00fccksetzen.",
     "templates.save": "E-Mail Templates speichern.",
-    "users.setorglogin": "Anmeldungen f\u00fcr Benutzer von bestimmten Einrichtungen aktivieren\/deaktivieren.",
     "users.setlogin": "Anmeldungen f\u00fcr einzelne Benutzer aktivieren\/deaktivieren.",
     "users.setmail": "E-Mail Benachrichtigungen f\u00fcr einzelne Benutzer aktivieren\/deaktivieren.",
-    "users.setsu": "Benutzer zu SuperUser ernennen."
+    "users.setorglogin": "Anmeldungen f\u00fcr Benutzer von bestimmten Einrichtungen aktivieren\/deaktivieren.",
+    "users.setsu": "Benutzer zu SuperUser ernennen.",
+    "users.view": "Benutzerliste sehen."
 }
