[dnbd3] Clarify firewall setting

--- a/modules-available/dnbd3/lang/de/template-tags.json
+++ b/modules-available/dnbd3/lang/de/template-tags.json
@@ -27,8 +27,8 @@
     "lang_externalServer": "Externer DNBD3-Server",
     "lang_externalServerAdd": "Externen Server hinzuf\u00fcgen",
     "lang_externalServerHelp": "Ein externer Server wird nicht \u00fcber den Satellitenserver konfiguriert und verwaltet. Das Installieren, Einrichten und ggf. Aktualisieren der DNBD3-Serversoftware muss manuell durchgef\u00fchrt werden. Dies bietet mehr Flexibilit\u00e4t bei der Konfiguration und Anpassung, z.B. bei der Verwendung von RAID- oder bcache-Setups, oder wenn der DNBD3-Server auf einer Maschine laufen soll, die noch andere Services bereitstellt. Weitere Informationen dazu finden Sie im Wiki.",
-    "lang_firewallInfo": "Wird ein Proxy auf einen oder mehrere R\u00e4ume beschr\u00e4nkt, werden Clients aus anderen R\u00e4umen diesen Proxy nicht verwenden. Technisch ist der Zugriff aus anderen R\u00e4umen jedoch trotzdem noch m\u00f6glich. Mit aktivieren dieser Option wird der Zugriff aus anderen R\u00e4umen per Firewall verhindert.",
-    "lang_firewalled": "Zugriff auf zugewiesene R\u00e4ume beschr\u00e4nken",
+    "lang_firewallInfo": "Wird ein Proxy auf einen oder mehrere R\u00e4ume beschr\u00e4nkt, werden Clients aus anderen R\u00e4umen diesen Proxy nicht verwenden. Technisch ist der Zugriff aus anderen R\u00e4umen jedoch trotzdem noch m\u00f6glich. Mit Aktivieren dieser Option wird der Zugriff aus anderen R\u00e4umen per Firewall verhindert.",
+    "lang_firewalled": "Zugriff zus\u00e4tzlich per Firewall auf zugewiesene R\u00e4ume beschr\u00e4nken",
     "lang_flags": "Flags",
     "lang_global": "Global",
     "lang_image": "Image",
