--- a/modules-available/dnbd3/lang/en/template-tags.json
+++ b/modules-available/dnbd3/lang/en/template-tags.json
@@ -27,8 +27,8 @@
     "lang_externalServer": "External DNBD3-Server",
     "lang_externalServerAdd": "Add external server",
     "lang_externalServerHelp": "An external server is not configured and managed by the satellite server. The installation, configuration and update of the DNBD3 software has to be done manually. This is a more flexible approach which is preferable for RAID or bcache setups or if the DNBD3-Server offers additional services. More information in the wiki.",
-    "lang_firewallInfo": "If the proxy is restricted to one or more locations, clients from other locations won't use that specific proxy. But technically it's still possible to gain access from other locations. If you activate this setting the access from other locations is blocked with iptables.",
-    "lang_firewalled": "Limit access to corresponding locations",
+    "lang_firewallInfo": "If the proxy is restricted to one or more locations, clients from other locations won't use that specific proxy, but technically it's still possible to access this proxy from other locations. If you activate this setting the access from other locations is forcefully blocked using iptables.",
+    "lang_firewalled": "Limit access to corresponding locations via firewall",
     "lang_flags": "Flags",
     "lang_global": "Global",
     "lang_image": "Image",
