[permissionmanager] Introduce dedicated "permission denied" page
Closes #3350

--- a/modules-available/permissionmanager/lang/de/template-tags.json
+++ b/modules-available/permissionmanager/lang/de/template-tags.json
@@ -8,6 +8,9 @@
     "lang_name": "Name",
     "lang_newRole": "Rolle anlegen",
     "lang_numAssignedUsers": "Benutzer mit dieser Rolle",
+    "lang_permissionDeniedBody": "Ihnen fehlt eine oder mehrere Berechtigungen, um auf diese Seite oder Funktion zuzugreifen.",
+    "lang_permissionDeniedHeader": "Zugriff verweigert",
+    "lang_permission": "Berechtigung",
     "lang_permissions": "Rechte",
     "lang_removeRole": "Rollen entziehen",
     "lang_roleDeleteConfirm": "Sind Sie sich sicher, dass Sie diese Rolle l\u00f6schen m\u00f6chten? Benutzer, denen diese Rolle zugewiesen ist, werden die entsprechenden Berechtigungen verlieren.",
