--- a/modules-available/serversetup-bwlp/lang/de/permissions.json
+++ b/modules-available/serversetup-bwlp/lang/de/permissions.json
@@ -1,4 +1,5 @@
 {
+    "access-page": "Seite sehen.",
     "download": "USB-Image herunterladen.",
     "edit.address": "Boot-Adresse des Servers ausw\u00e4hlen.",
     "edit.menu": "Bootmen\u00fc anpassen."
