--- a/modules-available/serversetup-bwlp/lang/en/permissions.json
+++ b/modules-available/serversetup-bwlp/lang/en/permissions.json
@@ -1,5 +1,6 @@
 {
-	"edit.address": "Choose boot address of the server.",
-	"edit.menu": "Customize boot menu.",
-	"download": "Download USB Image."
+    "access-page": "View page.",
+    "download": "Download USB Image.",
+    "edit.address": "Choose boot address of the server.",
+    "edit.menu": "Customize boot menu."
 }
