--- a/modules-available/permissionmanager/lang/en/template-tags.json
+++ b/modules-available/permissionmanager/lang/en/template-tags.json
@@ -1,6 +1,7 @@
 {
     "lang_addRole": "Grant Roles",
     "lang_addRoleHeading": "Add new role",
+    "lang_description": "Description",
     "lang_editRoleHeading": "Edit role",
     "lang_locationAwareDesc": "Permissions with this symbol can be restricted to certain locations. All other permissions are independent of the locations selected for this role.",
     "lang_locations": "Locations",
@@ -8,9 +9,9 @@
     "lang_name": "Name",
     "lang_newRole": "New Role",
     "lang_numAssignedUsers": "Users with this role",
+    "lang_permission": "Permission",
     "lang_permissionDeniedBody": "You are missing one or more permissions to access this page or functionality.",
     "lang_permissionDeniedHeader": "Access denied",
-    "lang_permission": "Permission",
     "lang_permissions": "Permissions",
     "lang_removeRole": "Revoke Roles",
     "lang_roleDeleteConfirm": "Are you sure you want to delete this role? Users currently assigned to this role will lose the according permissions.",
