--- a/modules-available/roomplanner/lang/de/module.json
+++ b/modules-available/roomplanner/lang/de/module.json
@@ -1,4 +1,4 @@
 {
-    "module_name": "PVS-Manager",
-    "page_title": "PVS-Manager"
+    "module_name": "Raumplaner",
+    "page_title": "Raumplaner"
 }
