[news] Update translations

--- a/modules-available/news/lang/de/template-tags.json
+++ b/modules-available/news/lang/de/template-tags.json
@@ -1,4 +1,5 @@
 {
+    "lang_confirmDelete": "Eintrag l\u00f6schen?",
     "lang_content": "Inhalt",
     "lang_date": "Datum",
     "lang_editHelp": "Hilfe bearbeiten",
