--- a/modules-available/news/lang/en/template-tags.json
+++ b/modules-available/news/lang/en/template-tags.json
@@ -1,4 +1,5 @@
 {
+    "lang_confirmDelete": "Delete entry?",
     "lang_content": "Content",
     "lang_date": "Date",
     "lang_editHelp": "Edit Help",
