--- a/modules-available/main/lang/de/template-tags.json
+++ b/modules-available/main/lang/de/template-tags.json
@@ -1,7 +1,7 @@
 {
     "lang_browserTime": "Browser",
     "lang_changePassword": "Passwort \u00e4ndern",
-    "lang_clockDriftWarn": "Die Uhrzeit des Satelliten-Servers weicht von der Uhrzeit des lokalen Systems\/Browsers ab. Bitte stellen Sie sicher, dass die Uhrzeit des Servers korrekt ist, da sonst zeitabh\u00e4ngige Einstellungen und Aufgaben evtl. nicht korrekt durchgef\u00fchrt werden.",
+    "lang_clockDriftWarn": "Die Uhrzeit des Satellitenservers weicht von der Uhrzeit des lokalen Systems\/Browsers ab. Bitte stellen Sie sicher, dass die Uhrzeit des Servers korrekt ist, da sonst zeitabh\u00e4ngige Einstellungen und Aufgaben evtl. nicht korrekt durchgef\u00fchrt werden.",
     "lang_goTo": "Gehe zu",
     "lang_intro": "Dies ist die bwLehrpool Konfigurationsoberfl\u00e4che.",
     "lang_introGuest": "Dies ist das Administrations-Interface der lokalen bwLehrpool-Installation. Bitte authentifizieren Sie sich, um Einstellungen vorzunehmen.",
@@ -11,7 +11,7 @@
     "lang_login": "Anmelden",
     "lang_logout": "Abmelden",
     "lang_needsSetup": "Einrichtung unvollst\u00e4ndig",
-    "lang_noExistingAccount": "Es existiert noch kein Administrator-Zugang f\u00fcr diesen Satelliten-Server.",
+    "lang_noExistingAccount": "Es existiert noch kein Administrator-Zugang f\u00fcr diesen Satellitenserver.",
     "lang_register": "Registrieren",
     "lang_serverTime": "Server",
     "lang_toggleNavigation": "Navigation ein\/ausblenden",
