[dozmod] Open mail templates with missing placeholders on save

--- a/modules-available/dozmod/lang/en/template-tags.json
+++ b/modules-available/dozmod/lang/en/template-tags.json
@@ -27,7 +27,7 @@
     "lang_event": "Event",
     "lang_fileSize": "File size",
     "lang_followingPlaceholdersUnused": "The following placeholders are not being used",
-    "lang_hasNewer": "Newer version exists",
+    "lang_hasNewer": "newer version exists",
     "lang_hash": "Hash",
     "lang_heading": "Images Marked for Deletion",
     "lang_host": "Host",
