--- a/modules-available/serversetup-bwlp/lang/en/template-tags.json
+++ b/modules-available/serversetup-bwlp/lang/en/template-tags.json
@@ -21,9 +21,11 @@
     "lang_menuCustomHint3": "and select as the default boot behavior custom as well.",
     "lang_menuDisplayTime": "Menu Display Time",
     "lang_menuGeneration": "Generating boot menu...",
-    "lang_moduleHeading": "iPXE / Boot Menu",
+    "lang_moduleHeading": "iPXE \/ Boot Menu",
+    "lang_pxeBuilt": "Built PXE binary",
     "lang_seconds": "Seconds",
     "lang_set": "Set",
+    "lang_usbBuilt": "Built USB image",
     "lang_usbImage": "USB image",
     "lang_usbImgHelp": "The USB image can be used to create a bootable USB stick, which enables you to boot bwLehrpool without changing your DHCP settings or enabling network boot in the clients. The only requirement is that you enable USB boot in the client's BIOS. The USB stick is only used for bootstrapping, the actual bwLehrpool system is still loaded via network from your local bwLehrpool server.",
     "lang_usbImgHelpLinux": "On Linux you can simply use dd to write the image to a usb stick. The image already contains a partition table, so make sure you write the image to the device itself and not to an already existing partition (e.g. to \/dev\/sdx not \/dev\/sdx1)",
