--- a/modules-available/adduser/lang/de/template-tags.json
+++ b/modules-available/adduser/lang/de/template-tags.json
@@ -19,6 +19,7 @@
     "lang_phone": "Telefon",
     "lang_role": "Rolle",
     "lang_userDeleteConfirm": "M\u00f6chten Sie diesen Benutzer wirklich l\u00f6schen?",
+    "lang_userIdCol": "ID",
     "lang_userManagement": "Benutzerverwaltung",
     "lang_userlist": "Benutzerliste"
 }
