--- a/modules-available/adduser/lang/en/template-tags.json
+++ b/modules-available/adduser/lang/en/template-tags.json
@@ -19,6 +19,7 @@
     "lang_phone": "Phone",
     "lang_role": "Role",
     "lang_userDeleteConfirm": "Do you want to delete this user?",
+    "lang_userIdCol": "ID",
     "lang_userManagement": "User management",
     "lang_userlist": "User list"
 }
