[ipxe] added add-menu-button, added delete-menu-buttons, fixed bug that timeoutms didn't save, fixed bug that last edited menu gets the isDefault value, some table styling + language tags

--- a/modules-available/serversetup-bwlp/lang/de/template-tags.json
+++ b/modules-available/serversetup-bwlp/lang/de/template-tags.json
@@ -1,5 +1,6 @@
 {
     "lang_active": "Aktiv",
+    "lang_addMenu": "Menü hinzufügen",
     "lang_bootAddress": "Boot-Adresse des Servers",
     "lang_bootBehavior": "Standard-Bootverhalten",
     "lang_bootHint": "Das Bootmen\u00fc muss nach einer \u00c4nderung der IP-Adresse neu generiert werden. In der Regel geschieht dies automatisch, der Vorgang kann in der Sektion Bootmen\u00fc allerdings auch manuell ausgel\u00f6st werden.",
@@ -8,11 +9,15 @@
     "lang_bootMenuCreate": "Bootmen\u00fc erzeugen",
     "lang_chooseIP": "Bitte w\u00e4hlen Sie die IP-Adresse, \u00fcber die der Server von den Clients zum Booten angesprochen werden soll.",
     "lang_customEntry": "Eigener Eintrag",
+    "lang_menuDeleteConfirm": "Sind Sie sicher, dass Sie dieses Menü löschen wollen?",
     "lang_downloadImage": "USB-Image herunterladen",
     "lang_downloadRufus": "Rufus herunterladen",
     "lang_example": "Beispiel",
     "lang_generationFailed": "Erzeugen des Bootmen\u00fcs fehlgeschlagen. Der Netzwerkboot von bwLehrpool wird wahrscheinlich nicht funktionieren. Wenn Sie den Fehler nicht selbst beheben k\u00f6nnen, melden Sie bitte die Logausgabe an das bwLehrpool-Projekt.",
+    "lang_isDefault": "Standard",
+    "lang_listOfMenus": "Menüliste",
     "lang_localHDD": "Lokale HDD",
+    "lang_locationCount": "Anzahl Orte",
     "lang_masterPassword": "Master-Passwort",
     "lang_masterPasswordHelp": "Das Master-Passwort wird ben\u00f6tigt, um einen Booteintrag direkt am Client tempor\u00e4r durch Dr\u00fccken der Tab-Taste zu editieren. Da dies f\u00fcr Manipulation am Client genutzt werden kann, sollte diese Funktion unbedingt mit einem Passwort gesch\u00fctzt werden.",
     "lang_menuCustom": "Benutzerdefinierter Men\u00fczusatz",
@@ -21,6 +26,7 @@
     "lang_menuCustomHint3": "und w\u00e4hlen Sie als Standard-Bootverhalten ebenfalls custom.",
     "lang_menuDisplayTime": "Anzeigedauer des Men\u00fcs",
     "lang_menuGeneration": "Erzeugen des Bootmen\u00fcs",
+    "lang_menuTitle": "Menü",
     "lang_moduleHeading": "iPXE \/ Boot Menu",
     "lang_pxeBuilt": "PXE-Binary gebaut",
     "lang_seconds": "Sekunden",
