--- a/modules-available/serversetup-bwlp/lang/en/template-tags.json
+++ b/modules-available/serversetup-bwlp/lang/en/template-tags.json
@@ -1,5 +1,6 @@
 {
     "lang_active": "Active",
+    "lang_addMenu": "Add Menu",
     "lang_bootAddress": "Boot Address of the Server",
     "lang_bootBehavior": "Default Boot Behavior",
     "lang_bootHint": "The Boot menu must be recreated after changing the IP address. Usually this is done automatically, but the process can also be triggered manually in the section of the boot menu.",
@@ -8,11 +9,15 @@
     "lang_bootMenuCreate": "Create Boot Menu",
     "lang_chooseIP": "Please select the IP address that the client server will use to boot.",
     "lang_customEntry": "Custom entry",
+    "lang_menuDeleteConfirm": "Are you sure you want to delete this menu?",
     "lang_downloadImage": "Download USB Image",
     "lang_downloadRufus": "Download Rufus",
     "lang_example": "Example",
     "lang_generationFailed": "Could not generate boot menu. The bwLehrpool-System might not work properly. If you can't fix the problem, please report the error log below to the bwLehrpool project.",
+    "lang_isDefault": "Default",
+    "lang_listOfMenus": "Menulist",
     "lang_localHDD": "Local HDD",
+    "lang_locationCount": "Number of Locations",
     "lang_masterPassword": "Master Password",
     "lang_masterPasswordHelp": "The master password is required to edit a boot menu entry. This should be set for security reasons.",
     "lang_menuCustom": "Custom Extra Menu",
@@ -21,6 +26,7 @@
     "lang_menuCustomHint3": "and select as the default boot behavior custom as well.",
     "lang_menuDisplayTime": "Menu Display Time",
     "lang_menuGeneration": "Generating boot menu...",
+    "lang_menuTitle": "Menu",
     "lang_moduleHeading": "iPXE \/ Boot Menu",
     "lang_pxeBuilt": "Built PXE binary",
     "lang_seconds": "Seconds",
